--- a/data/BoundaryData/TermsAndConditions.html
+++ b/data/BoundaryData/TermsAndConditions.html
@@ -25,11 +25,11 @@ Your use of the UK Data Service is subject to the terms of the UK Data Service <
 The following copyright statements MUST be used when reproducing or using this dataset,
 for example when displaying boundary data as a map or other graphic within a written report:
 
-    <span class="citation">Contains National Statistics data &#169 Crown copyright and database right [year]</span>
-    <span class="citation">Contains OS data &#169 Crown copyright [and database right] (year)</span>
+    <span class="citation">Source: Office for National Statistics licensed under the Open Government Licence v.3.0</span>
+    <span class="citation">Contains OS data &#169 Crown copyright and database right [year]</span>
 
 Note, that where any of the above copyright statements contain the word year, this should be replaced with
-the year, for example 2015, in which you used the UK Data Service dataset or wrote your report etc.
+the year, for example 2024, in which you used the UK Data Service dataset or wrote your report etc.
 
 In addition you can also include the following citation as a reference for this
 UK Data Service Census Support dataset where you have referred to this UK Data Service dataset in an essay,
@@ -47,7 +47,7 @@ If you have any questions about the use or licensing of this dataset please cont
 
 <a href="http://ukdataservice.ac.uk/help/get-in-touch.aspx">http://ukdataservice.ac.uk/help/get-in-touch.aspx</a>
 
-UK Data Service, November 2015
+UK Data Service, January 2024
 </pre>
 </body>
 </html>
